# ReviewSense

./: .env.example  .gitignore  README.md  docker-compose.yml  railway.toml
.github/workflows/: cd-production.yml  cd-staging.yml  ci-dev.yml
backend/main-api/: .dockerignore  .env.example  Dockerfile  README.md  jest.config.js  package-lock.json  package.json
backend/main-api/src/: index.js
backend/ml-service/: .dockerignore  .env.example  Dockerfile  pyproject.toml
backend/ml-service/app/: config.py  fallback_model.pkl  main.py  metrics.py
backend/ml-service/app/routes/: health.py  predict.py
backend/ml-service/app/services/: model_loader.py  prediction_logger.py
backend/ml-service/tests/: test_health.py  test_predict.py
backend/notification-service/: Dockerfile  package-lock.json  package.json
backend/notification-service/src/: index.js  ws.js
docs/: reviewsense-postman-collection.json
frontend/: .gitignore  Dockerfile  components.json  docker-entrypoint.sh  index.html  package-lock.json  package.json  playwright.config.ts  tailwind.config.js  vite.config.ts
frontend/public/: config.js
frontend/src/: App.tsx  index.css  main.tsx  vite-env.d.ts
frontend/src/components/: ActivityFeed.tsx  BackgroundMesh.tsx  EmptyState.tsx  Layout.tsx  Navbar.tsx  NeuralPulse.tsx  PageTransition.tsx  ProtectedRoute.tsx  SentimentBadge.tsx  (+1 more)
ml/: config.py  data_utils.py  download_data.py  evaluate.py  pyproject.toml  quality_gates.py  train.py
ml/.dvc/: config
ml/data/: .gitignore  reviews_raw.csv.dvc
monitoring/: prometheus.yml
scripts/: deploy-check.sh
(+45 files in other folders)
