[project]
name = "ml-service"
version = "0.1.0"
description = "ReviewSense ML inference service"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "scikit-learn>=1.5.0",
    "mlflow>=2.16.0",
    "pymongo>=4.9.0",
    "prometheus-fastapi-instrumentator>=7.0.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "httpx>=0.27.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
